Add test configuration and initial specs

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "xo",
+    "test": "npm run test:lint && npm run test:unit",
+    "test:unit": "nyc ava",
+    "test:lint": "xo",
     "start": "node index.js"
   },
   "preferGlobal": true,
@@ -37,6 +39,15 @@
     "rc": "1.2.8"
   },
   "devDependencies": {
+    "ava": "1.0.0-beta.6",
+    "nyc": "12.0.2",
+    "proxyquire": "2.0.1",
+    "sinon": "6.0.0",
     "xo": "0.21.1"
+  },
+  "nyc": {
+    "include": [
+      "**/lib/*.js"
+    ]
   }
 }
